--- a/index.html
+++ b/index.html
@@ -365,7 +365,13 @@
                             <a href="assets/Security + 701.pdf" class="btn btn-primary mt-2" target="_blank">View PDF</a>
                         </div>
                     </div>
-                
+                <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#notesAccordion">
+                        <div class="accordion-body">
+                            <p>The CompTIA Security+ SY0-701 is a globally recognized, vendor-neutral certification validating core cybersecurity skills for IT professionals. Launched November 7, 2023, it covers five domains: General Security Concepts (12%), Threats/Vulnerabilities/Attacks/Mitigations (22%), Security Architecture (18%), Security Operations (28%), and Security Program Management (20%), with emphasis on zero trust, cloud security, and hybrid environments. The exam features up to 90 multiple-choice and performance-based questions, lasts 90 minutes, requires a 750/900 passing score, and costs ~$392 USD. No prerequisites, but 2 years of IT experience is recommended; it's ideal for entry-level roles like security analyst and a foundation for advanced certs.</p>
+                            <a href="assets/Security + 701.pdf" class="btn btn-primary mt-2" target="_blank">View PDF</a>
+                        </div>
+                    </div>
+                    
                 </div>
             </div>
         </div>
@@ -402,5 +408,6 @@
     <!-- Custom JS -->
     <script src="script.js"></script>
 </body>
+
 
 </html>
