--- a/index.html
+++ b/index.html
@@ -365,16 +365,23 @@
                             <a href="assets/Security + 701.pdf" class="btn btn-primary mt-2" target="_blank">View PDF</a>
                         </div>
                     </div>
-                <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#notesAccordion">
+                    </div>
+              <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                         Summary of Security+ 701
+                        </button>
+                    </h2>
+                    <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#notesAccordion">
                         <div class="accordion-body">
                             <p>The CompTIA Security+ SY0-701 is a globally recognized, vendor-neutral certification validating core cybersecurity skills for IT professionals. Launched November 7, 2023, it covers five domains: General Security Concepts (12%), Threats/Vulnerabilities/Attacks/Mitigations (22%), Security Architecture (18%), Security Operations (28%), and Security Program Management (20%), with emphasis on zero trust, cloud security, and hybrid environments. The exam features up to 90 multiple-choice and performance-based questions, lasts 90 minutes, requires a 750/900 passing score, and costs ~$392 USD. No prerequisites, but 2 years of IT experience is recommended; it's ideal for entry-level roles like security analyst and a foundation for advanced certs.</p>
                             <a href="assets/Security + 701.pdf" class="btn btn-primary mt-2" target="_blank">View PDF</a>
                         </div>
                     </div>
-                    
+                    </div>
                 </div>
             </div>
-        </div>
     </section>
     <section id="contact">
         <div class="container">
@@ -411,3 +418,4 @@
 
 
 </html>
+
