--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                         Summary of Security+ 701
+                         anothoer summary
                         </button>
                     </h2>
                     <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#notesAccordion">
@@ -418,4 +418,5 @@
 
 
 </html>
+
 
