--- a/index.html
+++ b/index.html
@@ -332,8 +332,7 @@
             </div>
         </div>
     </div>
-
-    <section id="notes" class="bg-light">
+<section id="notes" class="bg-light">
         <div class="container">
             <h2 class="section-title text-center">Notes & Summaries</h2>
             <p class="section-subtitle text-center">Knowledge base and learning resources</p>
@@ -369,14 +368,14 @@
               <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                         anothoer summary
+                            data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                         Another Summary
                         </button>
                     </h2>
-                    <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#notesAccordion">
+                    <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#notesAccordion">
                         <div class="accordion-body">
-                            <p>The CompTIA Security+ SY0-701 is a globally recognized, vendor-neutral certification validating core cybersecurity skills for IT professionals. Launched November 7, 2023, it covers five domains: General Security Concepts (12%), Threats/Vulnerabilities/Attacks/Mitigations (22%), Security Architecture (18%), Security Operations (28%), and Security Program Management (20%), with emphasis on zero trust, cloud security, and hybrid environments. The exam features up to 90 multiple-choice and performance-based questions, lasts 90 minutes, requires a 750/900 passing score, and costs ~$392 USD. No prerequisites, but 2 years of IT experience is recommended; it's ideal for entry-level roles like security analyst and a foundation for advanced certs.</p>
-                            <a href="assets/Security + 701.pdf" class="btn btn-primary mt-2" target="_blank">View PDF</a>
+                            <p>The AWS Certified Cloud Practitioner is an entry-level certification designed for individuals seeking to understand the fundamentals of Amazon Web Services (AWS). It covers cloud concepts, AWS services (e.g., EC2, S3), security, pricing models, and billing. Suitable for non-technical and technical professionals, it requires no prior experience, includes a 65-question exam, lasts 90 minutes, and costs ~$100 USD. This certification is ideal for starting a cloud career with AWS.</p>
+                            <a href="assets/AWS_Cloud_Practitioner.pdf" class="btn btn-primary mt-2" target="_blank">View PDF</a>
                         </div>
                     </div>
                 </div>
@@ -392,7 +391,7 @@
                     <div class="social-links mt-4">
                         <a href="https://www.linkedin.com/in/hozaifa-elmalah-ch7/"
                             class="btn btn-outline-primary mx-2"><i class="fab fa-linkedin"></i> LinkedIn</a>
-                        <a href="https://wa.me/+201090404221" class="btn btn-outline-primary mx-2"><i
+                        <a href="https://wa.me/+201090494221" class="btn btn-outline-primary mx-2"><i
                                 class="fab fa-whatsapp"></i> WhatsApp</a>
                         <a href="mailto:almlahhdhyfh@gmail.com" class="btn btn-outline-primary mx-2"><i
                                 class="fas fa-envelope"></i> Email</a>
@@ -418,6 +417,7 @@
 
 
 </html>
+
 
 
 
